<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jackal_nav</name>
  <version>0.1.0</version>
  <description>Independent Jackal navigation package with risk assessment and adaptive speed control</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core navigation dependencies -->
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>navigation2</build_depend>
  <build_depend>nav2_amcl</build_depend>
  <build_depend>nav2_bringup</build_depend>
  <build_depend>nav2_bt_navigator</build_depend>
  <build_depend>nav2_costmap_2d</build_depend>
  <build_depend>nav2_core</build_depend>
  <build_depend>nav2_dwb_controller</build_depend>
  <build_depend>nav2_lifecycle_manager</build_depend>
  <build_depend>nav2_map_server</build_depend>
  <build_depend>nav2_behaviors</build_depend>
  <build_depend>nav2_planner</build_depend>

  <!-- Core ROS2 and message dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>nav2_common</depend>
  <depend>nav2_util</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>dwb_core</depend>
  <depend>dwb_plugins</depend>
  <depend>pointcloud_to_laserscan</depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 