<?xml version="1.0"?>
<package format="3">
  <name>risk_nav</name>
  <version>0.0.1</version>
  <description>Risk-aware navigation (Core vs Support) for Jackal/Isaac</description>
  <maintainer email="you@example.com">teus</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- 런치에서 쓰는 외부 노드들 -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 